main.css
@font-face {
    font-family: mssans;
    src: url(woff/w95fa.woff2) format('woff2');
}

body{
    margin: 0;
    padding: 0;
    background-color: black;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
}

.skip-text{
    display: none;
    font-family: mssans;
    color: rgb(165, 165, 165);
    font-size: 14px;
    padding: 8px;
    position: absolute;
    bottom: 0;
    right: 0;
    cursor: pointer;
}

.disclaimer-text{
    font-family: mssans;
    color: rgb(165, 165, 165);
    font-size: 14px;
    bottom: 0;
    position: absolute;
}

.container{
    display: none;
    width: 640px;
    height: 440px;
    position: relative;
    background-image: url(images/main3.bmp);
}

.homepage{
    width: 100%;
    height: 100%;
    background-image: url(images/main3.bmp);
    position: absolute;
}

.wdywtgt{
    width: 100%;
    height: 100%;
    background-image: url(images/MAIN3A.BMP);
    position: absolute;
    z-index: 1;
}

.category-page{
    width: 100%;
    height: 100%;
    position: absolute;
    display: none;
}

.categories{
    position: relative;
    width: 81.3%;
    height: 87%;
    padding: 15px 40px;
    padding-bottom: 0px;
}

.products{
    position: relative;
    width: 100%;
    height: 87%;
    padding: 15px 40px;
    padding-bottom: 0px;
}

.category{
    position: absolute;
    width: 187px;
    height: 177px;
    display: none;
}

.category.prod{
    background-image: url(images/mnprbtn.bmp);
    top: 0;
}

.category.online{
    background-image: url(images/mnolbtn.bmp);
    bottom: 0;
}

.category.games{
    background-image: url(images/mngmbtn.bmp);
    right: 0;
}

.category.kids{
    background-image: url(images/mnkdbtn.bmp);
    right: 0;
    bottom: 0;
}

.category.knowledge{
    background-image: url(images/mnkwbtn.bmp);
    right: 186px;
    top: 120px;
    height: 193px;
}

.category:hover{
    background-position: 374px center;
}

.category:active{
    background-position: 187px center;
}

.bottom-nav{
    position: relative;
    bottom: 0;
    padding: 0px 5px;
    display: flex;
    justify-content: space-between;
    display: none;
}

.intro-button{
    background: url(images/cambtn.bmp);
    border: none;
    width: 76px;
    height: 36px;
}

 .intro-button:active{
    background-position: 76px center;
}

.intro-button:hover{
    background-position: 154px center;
}

.exit-button{
    background: url(images/exitbtn.bmp);
    border: none;
    width: 60px;
    height: 36px;
}

.exit-button:hover{
    background-position: -67.5px center;
}

.exit-button:active{
    background-position: 66px center;
}

.accessory-button{
    background: url(images/suitbtn.bmp);
    border: none;
    width: 133px;
    height: 36px;
}

.accessory-button:hover{
    background-position: 266px center;
}

.accessory-button:active{
    background-position: 133px center;
}

.main-button{
    background: url(images/retbtn.bmp);
    border: none;
    width: 150px;
    height: 36px;
}

.main-button:hover{
    background-position: 284px center;
}

